episode-7/pod-with-annotations.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod
  annotations:
    description: "Production web server"
    build-version: "v1.2.3"
    git-commit: "abc123"
    git-branch: "main"
    contact: "platform-team@company.com"
spec:
  containers:
    - name: nginx
      image: nginx
      ports:
        - containerPort: 80
